@@ -47,6 +47,21 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="48.alpha" date="2024-12-12">
+      <description>
+        <p>A new release of Clocks</p>
+        <ul>
+          <li>Add mnemonics to all buttons</li>
+          <li>Fix auto-focus behavior in the alarm dialog</li>
+          <li>Update metainfo metadata</li>
+          <li>Fix restoration of the window width and height</li>
+          <li>Port to CSS variables</li>
+          <li>Fix Help page</li>
+          <li>Fix translation of the application name</li>
+          <li>Translations updates</li>
+        </ul>
+      </description>
+    </release>
     <release version="47.0" date="2024-09-20">
       <description>
         <p>A new release of Clocks</p>
