@@ -1,3 +1,14 @@
+gnome-clocks 48.alpha
+=================
+ * Add mnemonics to all buttons
+ * Fix auto-focus behavior in the alarm dialog
+ * Update metainfo metadata
+ * Fix restoration of the window width and height
+ * Port to CSS variables
+ * Fix Help page
+ * Fix translation of the application name
+ * Translations updates
+
 gnome-clocks 47.0
 =================
  * Port to new libadwaita widgets
